Implementação do backend e integração com o mesmo

--- a/frontend/src/components/informativeParagraph/informativeParagraph.css
+++ b/frontend/src/components/informativeParagraph/informativeParagraph.css
@@ -1,3 +1,11 @@
+.parentDivOfAllParagraph{
+    height: 3vmax;
+    width: 100%;
+    display: flex;
+    justify-content:center;
+    align-items: end;
+}
+
 .message{
     color: #F2F2F2;
     font-size: clamp(1rem, 2vw, 1.5rem);
