--- a/frontend/src/components/head/head.css
+++ b/frontend/src/components/head/head.css
@@ -5,7 +5,7 @@ body, html{
 
 .head{
     background-color: #F2F2F2;
-    height: 15%;
+    height: 7vmax;
     width: 100%;
     display: flex;
     justify-content: center;
