--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,7 +12,7 @@ body, html{
 
 .palheta{
   background-color: #003F63;
-  background-color: #33C758; 
+  background-color: #00ff00; 
   background-color: #DAA520 ;
   background-color: #F2F2F2;
 }
