Adição de mais validações no backend e frontend e ajuste em um componente

--- a/frontend/src/components/fixedInput/fixedInput.css
+++ b/frontend/src/components/fixedInput/fixedInput.css
@@ -1,10 +1,8 @@
 .parentDivOfAll{
     width: 30vmax;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
     padding: 0vmax 1vmax 1vmax 1vmax;
     margin-top: 2vmax;
+    height: 12vmax;
 }
 
 .descriptionRadio{
