Ajuste na responsividade

--- a/frontend/src/components/numberInput/NumberInput.css
+++ b/frontend/src/components/numberInput/NumberInput.css
@@ -32,7 +32,9 @@
     appearance: none;
     margin: 0; 
 } 
-
+input[type=number] {
+    -moz-appearance:textfield;
+}
 .containeButtons{
     position: relative;
     top: 10%;
