--- a/frontend/src/components/trainingDisplayCard/trainingDisplayCard.css
+++ b/frontend/src/components/trainingDisplayCard/trainingDisplayCard.css
@@ -131,13 +131,13 @@
     cursor: pointer;
     border: 0;
     height: 100%;
-    width: 70%;
+    width: 100%;
 }
 
 .editAttribute button img, .confirmAttribute button img{
     border: 0;
-    height: 65%;
-    width: 65%;
+    height: 2vmax;
+    width: 2vmax;
     max-height: 65%;
     max-width: 65%;
 }
@@ -228,7 +228,8 @@
     padding: 0.5em;
     border-radius: 0.5em;
     height: 2.5vmax;
-    width: 35%;
+    width: 35vmax;
+    max-width: 80%;
     cursor: pointer;
     font-size: clamp(1.2rem, 2.2vw, 1.7rem);
     color: #003F63;
