Correção do posicionamento do texto em telas menores

--- a/frontend/src/components/notFoundPage/notFoundPage.css
+++ b/frontend/src/components/notFoundPage/notFoundPage.css
@@ -8,10 +8,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.messagePageNotFound{
-    padding: 1vmax
+    margin-left: 10%;
+    width: 80%;
+    text-align: center;
+    flex-direction: column;
 }
 
 .parentDivOfAllImg{
