--- a/frontend/src/components/trainingDisplayCard/trainingDisplayCard.css
+++ b/frontend/src/components/trainingDisplayCard/trainingDisplayCard.css
@@ -113,6 +113,10 @@
     background-color: transparent;
 }
 
+.displaysInformation:nth-child(1){
+    cursor: pointer;
+}
+
 .editAttribute{
     height: 100%;
     width: 5%;
